# BBAnn

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.local  LICENSE  README.md  bigann.cpp  build_bbann.cpp  build_bigann.cpp  install.sh  intall.sh  search_bbann.cpp  search_bigann.cpp
cmake/: BundledGTest.cmake  EnableAddressSanitizer.cmake  EnableUndefinedSanitizer.cmake  Gbenchmark.cmake  KaHIP.cmake
flat/: flat.h
hnswlib/: hnswalg.h  hnswlib.h
include/: aio_reader.h  ann_interface.h  bbann.h  diskann.h
include/flat/: flat.h
include/hnswlib/: hnswalg.h  hnswlib.h  space_ip.h  space_l2.h  space_ui8_l2.h
include/hnswsqlib/: hnswalg.h  hnswlib.h  scalar_quantizer.h  space_ip.h  space_l2.h  space_sq_ip.h  space_sq_l2.h  visited_list_pool.h
include/ivf/: balanced_kmeans.h  clustering.h  clusting.h  hierarchical_kmeans.h  ivf_flat.h  kmeans.h  same_size_kmeans.h
include/lib/: algo.h  bbannlib.h  bbannlib2.h  ivf.h
include/pq/: pq.h  pq_residual.h
include/sq_hnswlib/: bruteforce.h  hnswalg.h  hnswlib.h  space_ip.h  space_l2.h  train_codebook.h  visited_list_pool.h
include/util/: TimeRecorder.h  constants.h  defines.h  distance.h  file_handler.h  heap.h  io_perf.h  merge.h  random.h  read_file.h  statistics.h  system.h  threadpool.h  utils.h  utils_inline.h
include/utils/: constants.h  defines.h  distance.h  file_handler.h  heap.h  read_file.h
index/: build.h
ivf/: clusting.h  ivf_flat.h
playground/: CMakeLists.txt  Yandex.TexttoImage.base.1K.fdata  breakdown.cpp  breakdown_bigann.cpp  breakdown_text2iamge.cpp  equal_height_histogram.cpp  equal_width_histogram.cpp  genenrate_sample.cpp  gt_reader.cpp  gt_sequential_slicer.cpp  histogram.cpp  norm_bias_histogram.cpp  plot_historgram_from_csv.py  sequenital_slicer.cpp  util.h
playground/centroid_analyzer/: bigann.csv  bigann_1m_centroids.csv  bigann_OLD.csv  centroid_distance_histogram.cpp
playground/dataset-partition/: analyze_partition.py  bin_io.py  build_index.py  command.txt  draw_curve.py  install.sh  query.py  run.sh
playground/draw_curve/: norm_bias.py  norm_distribution.py  vecs_io.py
playground/groundtruth_analyzer/: gt_nth_NN_distance_histogram.cpp  gt_reader.cpp
playground/norm_distribution/: equal_height_histogram.cpp  plot_historgram_from_csv.py
playground/query_complexity/: BIGANN d(c,q)~radius.ipynb  SSN d(c,q)~radius [nprobe=100].ipynb  SSN d(c,q)~radius [nprobe=20].ipynb  bbann.cpp  bigann.csv  bigann_search_full_queryComplexity.sh  compare_two_txt.py  gt_offset_slicer.cpp  offset_slicer.cpp  plot_from_csv.py  query_to_10NN_centriod_distance.txt  query_to_20NN_centriod_distance.txt  query_to_30NN_centriod_distance.txt  query_to_40NN_centriod_distance.txt  query_to_50NN_centriod_distance.txt  query_to_9thGT_distance.txt  rewrite.py  search_log_extract_queryComplexity.sh  top100_of_two_txt.txt
playground/range_query_dataset/: range_gt_offset_slicer.cpp  read_range_gt.cpp
pq/: pq.h
python/: .gitignore  Dockerfile.bbann  Dockerfile.simpleindex  algos.yaml  ann_bind.cpp  bbann-algo-1B-template.yaml  bbann-algo.yaml  bbann.py  instruction.sh  log  modified_algos.yaml  rebuild_pybind.sh  run_framework.sh  run_range_search.sh  run_range_search_1B_4K_nobuild.sh  run_range_search_1B_4K_nobuild_docker.sh  run_range_search_1B_8K_nobuild.sh  run_range_search_1B_nobuild.sh  run_range_search_M24.sh  run_range_search_M32.sh  run_range_search_nobuild.sh  run_range_search_random.sh  setup.py  utils.py
python/bbannpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/submission/: Dockerfile.bbann  algos.yaml  bbann.py  run_framework.sh
python/tests/: bbann_build_test.py  bbann_query_test.py
scripts/: CMakeLists.txt  calc_recall_dis.cpp  calc_recall_id.cpp  check_ssnpp_radius.cpp  count_ssnpp_gt.cpp  generate_query_from_base.cpp  get_first_n_from_base.cpp  merge_uid_into_rawdata.cpp  read_first_two_uint32.cpp  test_different_reader.cpp
scripts/bbann_script/: bigann_search.sh  bigann_search_full.sh  build.sh  build_log_extract.sh  deep_search_full.sh  extract.sh  msspacev_search.sh  msspacev_search_full.sh  msturing_search_full.sh  old_search_log_extract.sh  rewrite.py  search.sh  search_full.sh  search_log_extract.sh  ssnpp_search_full.sh  text2image_search_full.sh
scripts/old_scripts/: bigann_search_full.sh  build.sh  extract-pqr.sh  old_search.sh
scripts/test_scripts/: OLD_extract-pqr.sh  analyze_stat.py  bigann_search.sh  build.sh  extract.sh  pipeline-extract-pqr.sh  rewrite.py  search.sh
src/: CMakeLists.txt  TimeRecorder.cpp  bbann.cpp  build.cpp  diskann.cpp  diskann2.cpp  query.cpp  random.cpp
src/history/: build.cpp  diskann.cpp  query.cpp
src/lib/: CMakeLists.txt  algo.cpp  bbannlib.cpp  bbannlib2.cpp  build_graph.cpp  ivf.cpp  test.cpp
test/: CMakeLists.txt  TestIOPerf.cpp  Tester.cpp  bigann.cpp  build_bigann.cpp  dummy_benchmark.cpp  helloworld_io_perf.cpp  recursive_kmeans_test.cpp  sample.1k.u8bin  search_bigann.cpp  test_aio_reader.cpp  test_bigannlib.cpp  test_build_graph.cpp  test_diskann1.cpp  test_dist.cpp  test_distance.cpp  test_hnsw_range.cpp  test_pq.cpp  test_pq_residual.cpp  test_refine_id.cpp  test_same_size_kmeans.cpp  test_statistics.cpp
util/: constants.h  defines.h  file_handler.h  merge.h  statistics.h  system.h
