add_executable(calc_recall_dis calc_recall_dis.cpp)

add_executable(calc_recall_id calc_recall_id.cpp)

add_executable(read_first_two_uint32 read_first_two_uint32.cpp)

add_executable(get_first_n_from_base get_first_n_from_base.cpp)

add_executable(generate_query_from_base generate_query_from_base.cpp)